# domain-k-evolver

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/: core-pipeline-spec-v1.md  data-generation-end-to-end-review.md  design-v2.md  entity-acquisition-strategy-draft.md  gu-bootstrap-expansion-policy.md  gu-bootstrap-spec.md  gu-from-scratch.md  operator-guide.md  phase-next-refactor-task-review_codex.md  phase2-analysis.md  phase4-readiness-report.md  session-compact.md  si-p5-review-hangul.md  silver-implementation-tasks.md  silver-masterplan-v2.md  structural-redesign-tasks_CC.md
schemas/: evidence-unit.json  gap-unit.json  knowledge-unit.json  patch-unit.json  policy.json  remodel_report.schema.json  telemetry.v1.schema.json
scripts/: _gate_helpers.py  analyze_p3r_gap.py  analyze_p7_ab_signals.py  analyze_saturation.py  analyze_trajectory.py  check_s3_gu_gate.py  run_bench.py  run_one_cycle.py  run_p2_bench.py  run_readiness.py
src/: __init__.py  config.py  graph.py  orchestrator.py  state.py
templates/: collection-plan.md  critique-report.md  evidence-claim-set.md  kb-patch.md  revised-plan.md  seed-pack.md  si-index-row.md  si-readiness-report.md  si-trial-card.md
tests/: conftest.py  test_adapters.py  test_collect_p3.py  test_config.py  test_fetch_pipeline.py  test_graph.py  test_html_strip.py  test_invariant_checker.py  test_llm_parse.py  test_metrics.py  test_metrics_guard.py  test_metrics_logger.py  test_orchestrator.py  test_p2_gate_e2e.py  test_plateau_detector.py  test_policy_manager.py  test_providers.py  test_readiness_gate.py  (+6 more)
(+1779 files in other folders)
